use rouge highlighter + fix code alignment

--- a/style.css
+++ b/style.css
@@ -331,6 +331,10 @@ figure img {
 	height: auto;
 }
 
+figure.highlight {
+	text-align: left;
+}
+
 figcaption {
 	font-style: italic;
 	font-size: 80%;
